Fix the lighten tint color in Dark Mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,7 @@
 @media (prefers-color-scheme: dark) {
     :root {
         --tint-color: #579df8; 
-        --tint-color-lighten: #7199FF;
+        --tint-color-lighten: #67A6F8;
         --text-color: #DFDFDF;
         --text-color-lighten-secondary: #C4C4C4;
         --background-color: #2C2A28;
